--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -1,12 +1,29 @@
 --- 
 :en: 
+  :pages: 
+    :help: 
+      :title: Help
+      :help: Help
+    :about: 
+      :title: About
+      :about_title: About Peer Supervision Groups
+    :home: 
+      :title: Home
+    :home_guest: 
+      :links: 
+        :signup: Sign up now!
+      :about_title: About Peer Supervision Groups
+      :description: This is the live test site for the Peer Supervision Groups project, for questions or comments visit our <a href='http://github.com/wolfgangihloff/peergroupsupervision'> github site</a>.
+    :contact: 
+      :title: Contact
+      :contact_title: Contact
   :chat_users: 
     :chat_users: 
+      :links: 
+        :problem_owner: Problem owner
+        :leader: Leader
       :captions: 
         :leader: Leader
-      :links: 
-        :leader: Leader
-        :problem_owner: Problem owner
   :activerecord: 
     :models: 
       :user: user
@@ -19,6 +36,10 @@
           :blank: missing!
           :invalid: missing!
           :too_short: missing!
+  :chat_rooms: 
+    :show: 
+      :links: 
+        :new_thread: new thread
   :rules: 
     :edit: 
       :title: Edit Rule
@@ -45,7 +66,14 @@
       :flash: 
         :success: Successfully destroyed rule.
         :successful: Successfully destroyed rule.
+  :chat_rules: 
+    :chat_rules: 
+      :activate_link: Activate
   :layouts: 
+    :footer: 
+      :links: 
+        :about: About
+        :contact: Contact
     :header: 
       :links: 
         :profile: Profile
@@ -54,21 +82,12 @@
         :settings: Settings
         :signin: Sign in
         :home: Home
-        :create_group: Create Group
         :signout: Sign out
         :my_groups: My Groups
+        :create_group: Create Group
         :users: Users
-    :footer: 
-      :links: 
-        :about: About
-        :contact: Contact
-  :chat_rooms: 
-    :show: 
-      :links: 
-        :new_thread: new thread
-  :chat_rules: 
-    :chat_rules: 
-      :activate_link: Activate
+  :flash: 
+    :sign_in_request: Please sign in to access this page.
   :other: 
     :controller: 
       :action: 
@@ -76,8 +95,6 @@
           :success: default
           :error: default
           :successful: default
-  :flash: 
-    :sign_in_request: Please sign in to access this page.
   :helpers: 
     :label: 
       :user: 
@@ -85,28 +102,12 @@
         :password: ""
         :name: ""
         :email: ""
+        :passcode: ""
       :session: 
         :password: ""
         :email: ""
       :chat_update: 
         :message: ""
-  :pages: 
-    :help: 
-      :title: Help
-      :help: Help
-    :about: 
-      :title: About
-      :about_title: About Peer Supervision Groups
-    :home_guest: 
-      :about_title: About Peer Supervision Groups
-      :links: 
-        :signup: Sign up now!
-      :description: This is the live test site for the Peer Supervision Groups project, for questions or comments visit our <a href='http://github.com/wolfgangihloff/peergroupsupervision'> github site</a>.
-    :home: 
-      :title: Home
-    :contact: 
-      :contact_title: Contact
-      :title: Contact
   :sessions: 
     :create: 
       :title: Sign in
@@ -136,24 +137,24 @@
       :links: 
         :reply: reply
   :groups: 
-    :group_brief: 
-      :links: 
-        :edit: Edit
-        :leave: leave
-        :join: join
-        :chat: Chat
-        :delete: delete
-      :confirmations: 
-        :delete: You sure?
     :index: 
       :title: 
-        :your_groups: Your Groups
         :all_groups: All Groups
+        :your_groups: Your Groups
       :no_groups: There are no groups here.
     :create: 
       :flash: 
         :success: Group Create Successfully
         :successful: Group Create Successfully
+    :group_brief: 
+      :confirmations: 
+        :delete: You sure?
+      :links: 
+        :chat: Chat
+        :edit: Edit
+        :join: join
+        :leave: leave
+        :delete: delete
     :show: 
       :links: 
         :edit: Edit
