User can submit blank topic

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -167,6 +167,7 @@
       :flash: 
         :successful: 
     :index: 
+      :heading: List of already submitted topics
       :title: Submitted topics
     :new: 
       :content: 
