--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -23,6 +23,8 @@
           :taken: 
           :too_long: 
           :too_short: 
+        :vote: 
+          :blank: 
   :attributes: 
     :content: 
     :description: 
@@ -34,6 +36,8 @@
     :password: 
     :password_confirmation: 
     :state: 
+    :statement: 
+    :statement_id: 
   :chat_rooms: 
     :show: 
       :links: 
@@ -71,6 +75,10 @@
         :too_short: 
       :state: 
         :inclusion: 
+      :statement: 
+        :blank: 
+      :statement_id: 
+        :blank: 
   :flash: 
     :sign_in_request: Please sign in to access this page.
   :formtastic: 
@@ -162,13 +170,18 @@
         :yes: "Yes"
       :question: Do you want to create new Supervision Session?
       :title: New Supervision Session
+  :topic_questions: 
+    :new: 
+      :heading: All submitted questions to the topic
+      :step_description: Do you have any question regarding the topic?
+      :title: Questions to the topic
   :topic_votes: 
     :create: 
       :flash: 
         :successful: Thank you for voting.
     :index: 
       :heading: List of all submitted topics
-      :step_description: Vote on the topic you want to discuss.
+      :step_description: 
       :title: Topic voting
     :new: 
       :heading: List of all submitted topics
