Supervision process moves forward after all ideas are provided and rated

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -141,6 +141,8 @@
       :flash: 
         :successful: Idea successfully submited
     :ideas: 
+      :feedback: 
+        :info: Provide the feedback on ideas
       :heading: 
         :idea: Idea
         :rating: Rating
